--- a/app/TODO
+++ b/app/TODO
@@ -1,5 +1,5 @@
 Add sorting to the devices list in the settings view.
-Get update status working.
+Test on ANDROID
 
 Features
 -------------------------
