--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,1 +1,11 @@
-Place your change log text here.  This file will be incorporated with your app at package time.
+---------------------------------
+Change Log
+---------------------------------
+
+Version 1.5
+-----------
+- Scene buttons now give feedback when pressed.
+- Switches for http/https and remote/local network
+- Changed name of default folder
+- ISY portal is the default remote connection
+- Added About page with version 
