--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -15,3 +15,4 @@ Version 1.5
 - When adding devices you can now click on them to add/remove them from the same page.
 - When clicking to add devices it will no longer add duplicates.
 - Now when you choose a device you can rename it you don't have to go to edit mode.
+- There is a new page for Programs that allows you to run them, disable them or see when they were last run.
