--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,12 @@
 ---------------------------------
 Change Log
 ---------------------------------
+Version 1.5.1
+-----------
+Added a sensor view 
+Added devices that are sensors to the sensor view when querying an ISY
+
+
 
 Version 1.5
 -----------
