--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,7 @@ Dimmers, switches and sensors have their own templates
 Fixed issue when existing folders could not be removed after being added (Might require a remove of the app and re-install)
 Moved programs onto the right menu and made them generic for more of a setup look
 Added runThen and runElse buttons for programs.
+Programs can now be added like any other device into any folder (run is assumed).
 
 
 Version 1.5
