--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,10 @@ Change Log
 ---------------------------------
 Version 1.5.1
 -----------
+Other UI elements now refresh after scenes are turned on/off or programs are run.
+
+Version 1.5.1
+-----------
 IMPORTANT: Please remove the app and re-install.  There were some deeper changes that had to be made for some of the following fixes.
 
 Added a sensor view 
