--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Change Log
 Version 1.5.1
 -----------
 Other UI elements now refresh after scenes are turned on/off or programs are run.
+Programs in right menu now shows all folders and the programs underneath them (it does flatten the structure).
 
 Version 1.5.1
 -----------
