--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,7 @@ Performance Improvements
 Switches now show the message associated with them and not the dimmer.  i.e. locked, on, off, etc
 Added a yellow border for on to make them look more distinguished.
 Fixed an issue with the data load from ISY where some of the devices weren't going into the correct categories.
+Added an options menu with the option to disable the view scrolling feature.
 
 Version 1.5.2
 -----------
