--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,14 @@
 ---------------------------------
 Change Log
 ---------------------------------
+Version 1.5.5
+-----------
+Fixed sensor switch to turn on when the sensor is actually on not just display the message "on"
+Improved status updates.
+Fixed sliders so they don't jump while sliding and updating.
+Made some performance enhancements.
+
+
 Version 1.5.4
 -----------
 Fixed issue on Android where the scene border wasn't turning yellow when pressed.
